azure-aks/https-ingress-controller/hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: 'true'
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - hello-world-ingress.MY_CUSTOM_DOMAIN
      secretName: tls-secret
  rules:
    - host: hello-world-ingress.MY_CUSTOM_DOMAIN
      http:
        paths:
          - backend:
              serviceName: aks-helloworld-one
              servicePort: 80
            path: /hello-world-one(/|$)(.*)
          - backend:
              serviceName: aks-helloworld-two
              servicePort: 80
            path: /hello-world-two(/|$)(.*)
          - backend:
              serviceName: aks-helloworld-one
              servicePort: 80
            path: /(.*)
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress-static
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
    nginx.ingress.kubernetes.io/use-regex: 'true'
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - hello-world-ingress.MY_CUSTOM_DOMAIN
      secretName: tls-secret
  rules:
    - host: hello-world-ingress.MY_CUSTOM_DOMAIN
      http:
        paths:
          - backend:
              serviceName: aks-helloworld-one
              servicePort: 80
            path: /static(/|$)(.*)
